-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug#0001882: lib/snmp.php fails if if max_oids undefined in snmp_walk function call
-bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
-bug#0001890: Default Tree View Mode -->Single Pane setting not working
-bug#0001900: equal sign(=) not correctly parsed in snmp data results
-bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
-bug#0001912: Does not store negative values from script/command output
-bug#0001918: Script server doesn't accept more than 1 blank space before the function name 
-bug#0001926: Importing templates "using defaults for this installation" associates all rra's defined
-bug#0001928: graph_image.php does not check local_graph_id
-bug#0001934: Poller sig_handler Bug
-bug#0001936: Removing Data Sources is Inneficient 
-bug#0001937: The Cacti Technical Support Page Uses Check Table Which Blocks
-bug#0001938: Excessive processing poller_output before truncating it on poller start
-bug#0001939: Do not query for items_perhost if concurrent_processes == 1
-bug#0001941: Queries are run twice
-bug: accept "Connection refused" on TCP ping tests
-bug: add missing row selection to graph preview
-bug: script server throws "undefined variable" error when in debug mode
-bug: Removing graphs was not taking advantage of bulk deletes causing major slowdowns
-bug: Add some command escaping
-bug: Change default font sizes
-bug: fixing issues with multiple "U" results for data input methods with multiple output parms
-bug: be smart for SNMP V3 and use AuthNoPriv when privacy passphrase is empty
-bug: when using template and search filter on graph management, sql error occurs
-feature#0001519: spine enhancement for parallel collection of data at device level
-feature#0001667: Get values of |host_*| variables in graph elements from data source