@@ -69,7 +69,7 @@ $fields_device_edit = array(
 	"device_template_id" => array(
 		"method" => "drop_sql",
 		"friendly_name" => __("Device Template"),
-		"description" => __("Choose what type of device, device template this is. The device template will govern what kinds of data should be gathered from this type of device."),
+		"description" => __("Choose the Device Template to use to define the default Graph Templates and Data Queries associated with this Device."),
 		"value" => "|arg1:device_template_id|",
 		"none_value" => "None",
 		"sql" => "select id,name from device_template order by name",
